[package]
name = "handwritten_recognition"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-stats = "0.6.0"
linfa = "0.7.0"
linfa-nn = { version = "0.7.0", features = ["serde"] }
linfa-clustering = { version = "0.7.0", features = ["serde"] } # 添加聚类算法
linfa-datasets = "0.7.0"
rand = "0.8.5"
csv = "1.3.0"
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
serde_json = "1.0.132"

[dependencies.serde]
version = "1.0.210"   # 显式添加serde，确保版本一致
features = ["derive"]
